--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -338,8 +338,9 @@ proc formatErrStackTrace {errmsg loc {cmdlist {}}} {
    }
 
    # define commands to filter out from bottom of stack
-   set filtercmdendlist [list {eval $mod_content} "source $loc" {uplevel 1\
-      source $siteconfig} {eval $cachecontent}]
+   set filtercmdendlist [list {eval [getModuleContent\
+      $::ModulesCurrentModulefile]} "source $loc" {uplevel 1 source\
+      $siteconfig} {eval $cachecontent}]
    # define commands to filter out from middle of stack
    set filtercmdmidlist [list {interp eval $itrp $::source_cache($filename)}]
 
