Rework modulefile eval error report code

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -113,10 +113,13 @@ proc reportInternalBugWarning {message {modfile {}} {title {Module\
 
 proc formatInternalBugMsg {message modfile} {
    if {$modfile ne {}} {
-      append message "\nIn '$modfile'"
+      set message [formatMessageInModule $message $modfile]
    }
-   append message "\nPlease contact <[getConf contact]>"
-   return $message
+   return "$message\nPlease contact <[getConf contact]>"
+}
+
+proc formatMessageInModule {message modfile} {
+   return "$message\nIn '$modfile'"
 }
 
 proc reportInfo {message {title INFO}} {
