--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -460,8 +460,6 @@ proc renderModulefileEvalError {itrp mode mod_file failed_eval error_msg} {
    if {!$failed_eval} {
       return 0
    }
-   set report_proc [expr {$mode eq {unload} && [getState force] ?\
-      {reportWarning} : {reportError}}]
 
    set eval_return_code 1
    # no error in case of "continue" command
@@ -469,6 +467,7 @@ proc renderModulefileEvalError {itrp mode mod_file failed_eval error_msg} {
    if {$error_msg eq {invoked "continue" outside of a loop} || $failed_eval\
       == 4} {
       set eval_return_code 0
+      unset error_msg
    # catch break even if called outside of a loop
    # on Darwin, error is different: no errorCode & return code set to 3
    } elseif {$error_msg eq {invoked "break" outside of a loop} || ($error_msg\
@@ -477,43 +476,50 @@ proc renderModulefileEvalError {itrp mode mod_file failed_eval error_msg} {
       # report load/unload/refresh evaluation break if verbosity level
       # >= normal, no error count raise during scan evaluation
       if {$mode in {load unload refresh} && [isVerbosityLevel normal]} {
-         set report_list [list {Module evaluation aborted}]
-      } elseif {$mode ne {scan} && ($mode ne {unload} || ![getState force])} {
-         set raise_error_count 1
+         set error_msg {Module evaluation aborted}
+      } else {
+         unset error_msg
+         if {$mode ne {scan}} {
+            set raise_error_count 1
+         }
       }
    } else {
       switch -- [getInterpVar $itrp errorCode] {
-         MODULES_ERR_READ {
-            set report_list [list $error_msg]
-         }
+         MODULES_ERR_READ {}
          MODULES_ERR_VALIDITY {
-            set report_list [list $error_msg $mod_file]
-            set report_proc [expr {$mode eq {unload} && [getState force] ?\
-               {reportInternalBugWarning} : {reportInternalBug}}]
+            set error_msg [formatMessageInModule $error_msg $mod_file]
+            set internal_bug 1
          }
          MODULES_ERR_SUBFAILED {
             # error counter and message already handled, just return err code
+            unset error_msg
          }
-         MODULES_ERR_GLOBAL {
-            set report_list [list $error_msg]
-         }
+         MODULES_ERR_GLOBAL {}
          default {
-            set report_list [list [formatInterpErrStackTrace $itrp $mod_file]]
-            set report_proc [expr {$mode eq {unload} && [getState force] ?\
-               {reportInternalBugWarning} : {reportInternalBug}}]
+            set error_msg [formatInterpErrStackTrace $itrp $mod_file]
+            set internal_bug 1
          }
       }
    }
 
-   if {$mode eq {unload} && [getState force]} {
+   set forced_unload [expr {$mode eq {unload} && [getState force]}]
+   if {$forced_unload} {
       set eval_return_code 0
+      if {[info exists error_msg]} {
+         set report_proc [expr {[info exists internal_bug] ?\
+            {reportInternalBugWarning} : {reportWarning}}]
+         $report_proc $error_msg
+      }
+   } else {
+      if {[info exists error_msg]} {
+         set report_proc [expr {[info exists internal_bug] ?\
+            {reportInternalBug} : {reportError}}]
+         $report_proc $error_msg
+      } elseif {[info exists raise_error_count]} {
+         raiseErrorCount
+      }
    }
 
-   if {[info exists report_list]} {
-      $report_proc {*}$report_list
-   } elseif {[info exists raise_error_count]} {
-      raiseErrorCount
-   }
    return $eval_return_code
 }
 
