Remove useless force arg on reloadModuleListUnloadPhase
As force state is taken into account when unloading, it is not necessary
anymore to pass this information through the reloadModuleListUnloadPhase
procedure.

When force state is enabled, cmdModuleUnload always returns 0, so no
error will be raised from reloadModuleListUnloadPhase.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1205,9 +1205,9 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
             # to ensure these dependent modules are unloaded with the same
             # loaded prereq as when they were loaded
             if {[llength $deprelist]} {
-               lassign [reloadModuleListUnloadPhase deprelist [getState\
-                  force] {Unload of dependent _MOD_ failed} depun]\
-                  depreisuasked deprevr depreextratag
+               lassign [reloadModuleListUnloadPhase deprelist {Unload of\
+                  dependent _MOD_ failed} depun] depreisuasked deprevr\
+                  depreextratag
                if {[info exists swprocessing]} {
                   if {[info exists swdeprelist]} {
                      set swdeprelist [list {*}$deprelist {*}$swdeprelist]
@@ -1646,10 +1646,9 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
             # same loaded prereq as when they were loaded. Avoid modules not
             # satisfying their constraint.
             if {[llength $deprelist]} {
-               ##nagelfar ignore +2 Found constant
-               lassign [reloadModuleListUnloadPhase deprelist [getState\
-                  force] {Unload of dependent _MOD_ failed} depun]\
-                  depreisuasked deprevr depreextratag
+               lassign [reloadModuleListUnloadPhase deprelist {Unload of\
+                  dependent _MOD_ failed} depun] depreisuasked deprevr\
+                  depreextratag
             }
 
             # DepUn modules unload prior main mod unload
