doc: add initial requirement file for RTD

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,6 +19,10 @@ build:
 sphinx:
    configuration: doc/source/conf.py
 
+python:
+  install:
+    - requirements: doc/source/requirements.txt
+
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
 #    - pdf
