ts: test multi unload modulefile evaluation

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -11,3 +11,13 @@ if {[info exists env(TESTSUITE_ERROR_ON_MULTI_LOAD)]} {
         }
     }
 }
+if {[info exists env(TESTSUITE_ERROR_ON_MULTI_UNLOAD)]} {
+    switch -- $env(TESTSUITE_ERROR_ON_MULTI_UNLOAD) {
+        sticky {
+            module-tag sticky err/1.0
+        }
+        super-sticky {
+            module-tag super-sticky err/1.0
+        }
+    }
+}
