ts: test multi ml load and unload modulefile evaluation

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -13,10 +13,10 @@ if {[info exists env(TESTSUITE_ERROR_ON_MULTI_LOAD)]} {
 }
 if {[info exists env(TESTSUITE_ERROR_ON_MULTI_UNLOAD)]} {
     switch -- $env(TESTSUITE_ERROR_ON_MULTI_UNLOAD) {
-        sticky {
+        sticky - sticky_forbidden {
             module-tag sticky err/1.0
         }
-        super-sticky {
+        super-sticky - super-sticky_forbidden {
             module-tag super-sticky err/1.0
         }
     }
