--- a/testsuite/modulefiles.4/.modulerc
+++ b/testsuite/modulefiles.4/.modulerc
@@ -59,3 +59,11 @@ if {[info exists ::env(TESTSUITE_STICKY)]} {
         }
     }
 }
+
+if {[info exists env(TESTSUITE_ERROR_ON_MULTI_UNLOAD)]} {
+    switch -- $env(TESTSUITE_ERROR_ON_MULTI_UNLOAD) {
+        sticky_forbidden - super-sticky_forbidden {
+            module-forbid setenv/1.0
+        }
+    }
+}
