install: rename error_on_multi_load into abort_on_error

--- a/site.exp.in
+++ b/site.exp.in
@@ -91,7 +91,7 @@ set install_tagcolorname "@tagcolorname@"
 
 set install_stickypurge "@stickypurge@"
 
-set install_erroronmultiload "@erroronmultiload@"
+set install_abortonerror "@abortonerror@"
 
 set install_mcookieversioncheck "@mcookieversioncheck@"
 
