--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -129,7 +129,7 @@ tagcolorname := @tagcolorname@
 
 # error behaviors
 stickypurge := @stickypurge@
-erroronmultiload := @erroronmultiload@
+abortonerror := @abortonerror@
 
 # check version on magic cookie
 mcookieversioncheck := @mcookieversioncheck@
