--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -68,7 +68,7 @@ array set g_state_defs [list\
 array set g_config_defs [list\
    contact {MODULECONTACT root@localhost 0 s}\
    abort_on_error {MODULES_ABORT_ON_ERROR {@abortonerror@} 0 l {load\
-      mod-to-sh try-load} {} {} eltlist}\
+      mod-to-sh try-load unload} {} {} eltlist}\
    auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 b {0 1}}\
    avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 b {0 1}}\
    avail_output {MODULES_AVAIL_OUTPUT {@availoutput@} 0 l {modulepath alias\
