Disable abort_on_error when --force
Abort on error is disabled when the --force option is in use. In this
case, behavior when an error occurs is to continue.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -811,7 +811,8 @@ proc commandAbortOnError {{command {}}} {
       set command [currentState commandname]
    }
    set abort_command_list [split [getConf abort_on_error] :]
-   return [expr {[isTopEvaluation] && $command in $abort_command_list}]
+   return [expr {[isTopEvaluation] && ![getState force] && $command in\
+      $abort_command_list}]
 }
 
 # ;;; Local Variables: ***
