--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -2005,7 +2005,8 @@ Switches:
   -p | --prepend  Prepend directory to MODULEPATH
   --auto          Enable automated module handling mode
   --no-auto       Disable automated module handling mode
-  -f | --force    By-pass dependency consistency or confirmation dialog
+  -f | --force    By-pass dependency consistency, abort on error or
+                  confirmation dialog
   --tag=LIST      Apply tag to loading module on 'load', 'try-load', 'load-any'
                   or 'switch' sub-commands (LIST is made of tag names
                   separated by ':')
