Add support for abort_on_error on ml cmd
ml command applies an abort on error behavior by default. So it is added
to the default value list of this option. When removed or if --force
option is used, ml now applies the continue on error behavior.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -67,7 +67,7 @@ array set g_state_defs [list\
 ##nagelfar ignore #73 Too long line
 array set g_config_defs [list\
    contact {MODULECONTACT root@localhost 0 s}\
-   abort_on_error {MODULES_ABORT_ON_ERROR {@abortonerror@} 0 l {load\
+   abort_on_error {MODULES_ABORT_ON_ERROR {@abortonerror@} 0 l {load ml\
       mod-to-sh try-load unload} {} {} eltlist}\
    auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 b {0 1}}\
    avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 b {0 1}}\
