Add abort_on_error support for reload subcmd
reload sub-command applies abort on error behavior by default. So it is
added to the default value of this option. When removed or if --force is
used, reload now applies continue on error behavior.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1858,7 +1858,8 @@ proc cmdModuleReload {args} {
       if {[set errCode [catch {
          # run unload then load-again phases
          lassign [reloadModuleListUnloadPhase lmlist] isuasked vr extratag
-         reloadModuleListLoadPhase lmlist $isuasked $vr $extratag
+         reloadModuleListLoadPhase lmlist $isuasked $vr $extratag [getState\
+            force]
       } errMsg]] == 1} {
          # rollback settings if some evaluation went wrong
          restoreSettings
