cirrus: fix R-core module dependency on RockyLinux 8
environment-modules should now be preinstalled to avoid fetching another
module implementation from enabled repositories to complete R-core
dependencies.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -181,6 +181,9 @@ task:
       sed -i 's|enabled=0|enabled=1|' /etc/yum.repos.d/Rocky-PowerTools.repo
       # specific update of libarchive is required for CMake on EL8.3
       yum update -y libarchive
+      # need to pre-install correct module implementation to avoid fetching
+      # another one from EPEL (as dependency for R-core) on recent RockyLinux 8
+      yum install -y environment-modules
     fi
     if [[ $VERSION_ID == 8* ]]; then
       PYTHON_PKG='python36'
