ts: add abort_on_error tests for reload

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -15,5 +15,13 @@ if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
         super-sticky - super-sticky_forbidden {
             module-tag super-sticky err/1.0
         }
+        sticky_forbidden_same {
+            module-tag sticky err/1.0
+            module-forbid err/1.0
+        }
+        super-sticky_forbidden_same {
+            module-tag super-sticky err/1.0
+            module-forbid err/1.0
+        }
     }
 }
